fix gap

--- a/client/src/pages/auth/Login.module.css
+++ b/client/src/pages/auth/Login.module.css
@@ -32,7 +32,7 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 1.5rem;
 }
 
 .form .input {
@@ -131,13 +131,15 @@ label.label {
   left: 0.5rem;
   font-size: 1.4rem;
   pointer-events: none;
-  transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* opacity: 0; */
+  transition: all 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+/*  */
 .form input.textInput:is(:focus) ~ label.label,
 .filled {
   transform: translate(10%, -110%);
   color: var(--color-nav-link);
+  opacity: 0.9;
 }
 .filled span {
   color: var(--placeholder);
